2003-04-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (InitializeMagick): Seed the random number
	generator.
	* magick/utility.c (ExpandFilenames): Handle tilde expansion
	properly. Handle relative glob specifications. Skip over "*"
	argument to +profile properly. Don't expand VID: specifications
	since the VID: coder will execute ExpandFilenames() later. Apply
	format specifier prefix to globbed file names. Fix double frees
	and rationalize memory management by always copying to a new
	vector.

2003-04-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (InitializeMagick): Decided to
	move clean-up signal-handler registration from gm.c
	to magick.c in order to ensure that resources are
	cleaned up for all library users. This means that
	if a user program wants to do something special for
	signals registered to be caught by InitializeMagick
	(SIGHUP, SIGINT, SIGQUIT, SIGABRT, SIGTERM, SIGXCPU,
	& SIGXFSZ) then the user program should register its
	own signal handlers after invoking InitializeMagick.
	The user is then responsible for making sure that
	DestroyMagick is invoked if an unexpected signal is
	caught.
	* tests/Makefile.am (check-constitute): Added
	constitute tests.
	* magick/constitute.c: New test program to ensure
	that ConstituteImage and DispatchImage are working
	correctly.

2003-04-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/download.html: Added links to directories
	at ftp.graphicsmagick.org.
	* index.html: Add notice regarding 1.0 Beta0
	availability.
	* www/cvs.html: Updated CVS checkout information to
	include the GraphicsMagick-1_0 branch.
	* coders/psd.c (ReadPSDImage): Applied patch
	(SourceForge patch ID 722849) from Derry Bryson to
	fix a memory leak. An image was being leaked.
	* magick/constitute.c (DispatchImage): Applied patch
	(SourceForge patch ID 722655) from Derry Bryson to
	correctly use the switch_map array rather than the