@@ -119,7 +119,6 @@ extern "C" {
 # include "magick/cache.h"
 # include "magick/cache_view.h"
 # include "magick/color.h"
-# include "magick/command.h"
 # include "magick/constitute.h"
 # include "magick/decorate.h"
 # include "magick/enhance.h"
@@ -163,7 +162,6 @@ extern "C" {
 # include "cache.h"
 # include "cache_view.h"
 # include "color.h"
-# include "command.h"
 # include "constitute.h"
 # include "decorate.h"
 # include "enhance.h"
